styling of coffee cards

--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -95,7 +95,6 @@
         <div class="row no-gutters">
               <div class="col single-text my-4 mx-2">
         <p>When coffee beans from multiple locations are roasted and mixed together, this is known as a coffee blend.</p>
-        <p>It is not uncommon to find coffee blends including beans from nine separate places, although in our roastery we typically use beans from around two to four different locations.</p>
         </div>
         </div>
 
@@ -104,27 +103,28 @@
 
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Project Co. Blend</h4>
                         <p>Our signature blend. A great, full body with slightly heavier texture and deep, dark brown colour. You’ll recognize it by its full, sweet aroma.</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -136,29 +136,31 @@
                 </div>
             </div>
         </div>
+        </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/italy-icon.png" alt="italy icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Red Rock</h4>
                         <p>This is our 3 bean North Italian blend. Containing the only speciality graded Robusta in the world, this blend gives very full body and sweet flavour, without the cheap iconic Robusta flavour anticipated by the coffee varietal.</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star "></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -170,30 +172,32 @@
                 </div>
             </div>
         </div>
+        </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/indonesia-icon.png" alt="indonesia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Moka Java Blend</h4>
                         <p>This Indonesian blend was created to offer our organic interpretation of one of the first blended coffees. Sweet tropical fruit mingles in the cup with hints of spice and floral tones. Crisp, balanced acidity gives this coffee
                             a clean, but balanced cup.</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -204,74 +208,79 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/france-icon.png" alt="french icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">French Roast</h4>
                         <p>A traditional French Roast blend roasted slightly lighter, resulting in a coffee with a rich, smoky taste and a semi-sweet finish. </p>
                         <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </div>
+        <div class="row no-gutters">
+            <div class="col-10 offset-1">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
+                    <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+                    <div class="media-body my-2 p-3">
+                        <h4 class="uppercase">Breakfast Blend</h4>
+                        <p>This remarkable blend offers the best of all worlds. With powerful flavour, full finish, and hearty aroma, it’s the perfect way to start the day off right!</p>
+                        <ul class="list-inline">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
+                                <p class="coffee-rating">Acidity</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
+                                <p class="coffee-rating">Aroma</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span></li>
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
+                                <p class="coffee-rating">Body</p>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star checked"></span>
+                                <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
                         </ul>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row no-gutters">
-            <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
-                    <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
-                    <div class="media-body my-2 p-3">
-                        <h4 class="uppercase">Breakfast Blend</h4>
-                        <p>This remarkable blend offers the best of all worlds. With powerful flavour, full finish, and hearty aroma, it’s the perfect way to start the day off right!</p>
-                        <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
-                                <p class="coffee-rating">Acidity</p>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
-                                <p class="coffee-rating">Aroma</p>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
-                                <p class="coffee-rating">Body</p>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star checked"></span>
-                                <span class="fa fa-star"></span>
-                                <span class="fa fa-star"></span></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -280,11 +289,12 @@
     <div class="text-center">
         <a href="coffees.html" class="btn btn-lg my-button my-border">Back</a>
         </div>
+        <br>
 
  <!-- order button -->
 
  <div class="text-center">
-        <a class="btn btn-lg" href="https://form.jotformeu.com/92817292835366" target="_blank" role="button" style="color:#fff; background-color: #fe5f55;">Order Here</a>
+        <p>Or place your order<a href="https://form.jotformeu.com/92817292835366" style="text-decoration: none; font-size: 1.5rem; font-weight: bold; color: #e7717d;" target="_blank"> here</p></a>
         </div>
 
 <!-- footer -->
