--- a/coffees-single.html
+++ b/coffees-single.html
@@ -97,7 +97,6 @@
 
         <div class="col single-text my-4 mx-2">
         <p>The term single origin is essentially as it sounds - it means that the beans come from one place only, usually from a certain region or country. Single origin coffees may even be harvested from the same farm or estate.</p>
-        <p>Given that they are sourced from one place only, single origin coffees tend to be available exclusively at certain times of year, contingent on the growing season of the geographical location from which they were derived.</p>
         </div>
         </div>
         </div>
@@ -106,27 +105,28 @@
 
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Colombia</h4>
                         <p>Smooth, yet utterly complex, dark, robust and rich. Colombian coffee is justly renowned for its incredible coffee flavour, truly one of the finest!</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-md-block">
                                 <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -137,30 +137,32 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Ethiopia</h4>
                         <p>This African coffee has a smooth soft mouth feel, with fruity berry and some nuttiness with a hint of sweet ripe cherry.</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -170,31 +172,33 @@
                         </ul>
                     </div>
                 </div>
+                </div>
             </div>
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/papanewguinea-icon.png" alt="papa new guinea icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Papa New Guinea</h4>
                         <p>Citric with chocolate tones best describes this Indonesian coffee that leave's a wonderful lingering herbal aftertaste.</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -204,31 +208,33 @@
                         </ul>
                     </div>
                 </div>
+                </div>
             </div>
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/puertorico-icon.png" alt="puerto rico icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Puerto Rico</h4>
                         <p>Café Hacienda San Pedro possesses a taste so rich and seductive, so velvety and smooth that it surprises the palate. Its classic aroma is semi-sweet and caramel-like with a delicate chocolaty aftertaste and spicy overtones.</p>
                         <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -237,32 +243,34 @@
                                 <span class="fa fa-star"></span></li>
                         </ul>
                     </div>
+                </div>
                 </div>
             </div>
         </div>
         <div class="row no-gutters">
             <div class="col-10 offset-1">
-                <div class="media-coffees my-border my-2 p-3">
+            <div class="media-coffees">
+                <div class="media my-border my-2 p-3">
                     <img src="./assets/images/tanzania-icon.png" alt="tanzania icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Tanzania</h4>
                         <p>This African coffee is rich with a creamy body and a hint of tropical fruit, raisin and complex acidity. </p>
                         <ul class="list-inline">
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Aroma</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star"></span>
                                 <span class="fa fa-star"></span></li>
-                            <li class="list-inline-item inline-stars">
+                            <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Body</p>
                                 <span class="fa fa-star checked"></span>
                                 <span class="fa fa-star checked"></span>
@@ -273,19 +281,21 @@
                     </div>
                 </div>
             </div>
+            </div>
         </div>
     </div>
+    <br>
 
 <!-- back button -->
 
     <div class="text-center">
         <a href="coffees.html" class="btn my-button my-border">Back</a>
         </div>
-
+    <br>
  <!-- link to order form -->
 
  <div class="text-center">
-        <p>Or you can place your order<a href="https://form.jotformeu.com/92817292835366" style="text-decoration: none; font-size: 1.5rem; font-weight: bold; color: #e7717d;" target="_blank"> here</p></a>
+        <p>Or place your order<a href="https://form.jotformeu.com/92817292835366" style="text-decoration: none; font-size: 1.5rem; font-weight: bold; color: #e7717d;" target="_blank"> here</p></a>
         </div>
 
     <hr class="section-divider">
