--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 <div class="landing pb-5">
 	<div class="container cards-landing-container text-center">
 <h2 class="uppercase our-story pt-5">Our story</h2>
+<hr class="section-divider">
 <div class="cards-landing-heading">
 <p>Brian is Australian and first learn to barist and roast in Sydndey.</p>
 <p>In 2008 he married his Irish wife, Sophie and moved back to Ireland to set up a roastery in a shed overlooking Blackwater Valley.</p>
@@ -141,11 +142,11 @@
 <div class="row cards-landing-row">
   <div class="col-12 col-md-4 cards-landing-column">
     <h2 class="uppercase text-center cards-h2">coffees</h2>
-    <img src="./assets/images/landing1.png" class="cards-landing-img my-border" alt="coffee plant icon image" style="width:100%">
+    <img src="./assets/images/landing1.png" class="cards-landing-img" alt="coffee plant icon image" style="width:100%">
     <div class="cards-landing-text">
-    <p>At Coffee Project Co. we travel all across the globe to meet with farmers, importers and exporters sourcing the freshest seasonal coffees for our customers.</p>
+    <p>At Coffee Project Co. we travel all the globe to meet with farmers, importers and exporters sourcing the freshest seasonal coffees for our customers.</p>
     </div>
-   <div style="text-align: center;"><button type="button" class="btn btn-lg my-button collapsed m-2" data-toggle="collapse" data-target="#collapse1">Read more on coffees</button></div>
+   <div style="text-align: center;"><button type="button" class="btn btn-lg my-button collapsed m-2" data-toggle="collapse" data-target="#collapse1">More on coffees</button></div>
    <div id="collapse1" class="collapse collapse-landing">
     <p>We buy only new season harvests, this ensures our coffee really is as fresh as can be!</p>
 				<p>As we bring in coffee beans from exotic lands around the world, we test out different roasting times
@@ -158,11 +159,11 @@
 
   <div class="col-12 col-md-4 cards-landing-column">
   <h2 class="uppercase text-center cards-h2">courses</h2>
-    <img src="./assets/images/landing2.png" class="cards-landing-img my-border" alt="barista icon image" style="width:100%">
+    <img src="./assets/images/landing2.png" class="cards-landing-img" alt="barista icon image" style="width:100%">
     <div class="cards-landing-text">
     <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of baristas and coffee professionals everywhere.</p>
     </div>
-<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse2">Read more on courses</button></div>
+<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse2">More on courses</button></div>
   <div id="collapse2" class="collapse collapse-landing">
     <p>The SCA Barista Courses and Coffee Skills Programme is an education system aimed to meet the needs of
 				baristas and coffee professionals everywhere</p>
@@ -176,11 +177,11 @@
 
   <div class="col-12 col-md-4 cards-landing-column">
   <h2 class="uppercase text-center cards-h2">brewing</h2>
-    <img src="./assets/images/landing3.png" class="cards-landing-img my-border" alt="book and coffee cup icon image" style="width:100%">
+    <img src="./assets/images/landing3.png" class="cards-landing-img " alt="book and coffee cup icon image" style="width:100%">
 <div class="cards-landing-text">
-    <p>You’ve got your well sourced and roasted coffee beans. You’ve got a solid, reliable coffee grinder and you’ve got a brewing device? Now it’s time for the magic.</p>
+    <p>You’ve got your well sourced and roasted coffee beans. You’ve got a reliable coffee grinder and you’ve got a brewing device? Now it’s time for the magic.</p>
     </div>
-<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse3">Read more on brewing</button></div>
+<div style="text-align: center;"> <button type="button" class="btn btn-lg my-button collapsed mb-2" data-toggle="collapse" data-target="#collapse3">More on brewing</button></div>
   <div id="collapse3" class="collapse collapse-landing">
     <p>There is a wide acceptance that manual brewing methods allow for better quality control and a superior coffee experience.</p>
        <p>For many, it’s more fun and fascinating to have a hands-on approach with their brewing process rather than hitting a ‘brew’ button on a machine.</p>
