modified some content in coffees-single and blends.html

--- a/coffees-blends.html
+++ b/coffees-blends.html
@@ -108,7 +108,7 @@
                     <img src="./assets/images/colombia-icon.png" alt="colombia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Project Co. Blend</h4>
-                        <p>Our signature blend. A great, full body with slightly heavier texture and deep, dark brown colour. You’ll recognize it by its full, sweet aroma.</p>
+                        <p>Our signature blend. A great full body with slightly heavier texture and deep, dark brown colour. Full, sweet aroma.</p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
@@ -144,7 +144,7 @@
                     <img src="./assets/images/italy-icon.png" alt="italy icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Red Rock</h4>
-                        <p>This is our 3 bean North Italian blend. Containing the only speciality graded Robusta in the world, this blend gives very full body and sweet flavour, without the cheap iconic Robusta flavour anticipated by the coffee varietal.</p>
+                        <p>Our 3 bean North Italian blend. This blend gives very full body and sweet flavour, without the cheap iconic Robusta flavour.</p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
@@ -180,8 +180,7 @@
                     <img src="./assets/images/indonesia-icon.png" alt="indonesia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Moka Java Blend</h4>
-                        <p>This Indonesian blend was created to offer our organic interpretation of one of the first blended coffees. Sweet tropical fruit mingles in the cup with hints of spice and floral tones. Crisp, balanced acidity gives this coffee
-                            a clean, but balanced cup.</p>
+                        <p>Sweet tropical fruit mingles in the cup with hints of spice and floral tones. Crisp, balanced acidity. A clean, but balanced cup.</p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
@@ -217,7 +216,7 @@
                     <img src="./assets/images/france-icon.png" alt="french icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">French Roast</h4>
-                        <p>A traditional French Roast blend roasted slightly lighter, resulting in a coffee with a rich, smoky taste and a semi-sweet finish. </p>
+                        <p>A traditional French blend oasted slightly lighter, resulting in a coffee with a rich, smoky taste and a semi-sweet finish. </p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
@@ -253,7 +252,7 @@
                     <img src="./assets/images/ethiopia-icon.png" alt="ethiopia icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Breakfast Blend</h4>
-                        <p>This remarkable blend offers the best of all worlds. With powerful flavour, full finish, and hearty aroma, it’s the perfect way to start the day off right!</p>
+                        <p>With powerful flavour, full finish, and hearty aroma, it’s the perfect way to start the day off right!</p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
