--- a/coffees-single.html
+++ b/coffees-single.html
@@ -218,7 +218,7 @@
                     <img src="./assets/images/puertorico-icon.png" alt="puerto rico icon" class="mr-3 mt-3 rounded-circle" style="width:60px;">
                     <div class="media-body my-2 p-3">
                         <h4 class="uppercase">Puerto Rico</h4>
-                        <p>Café Hacienda San Pedro possesses a taste so rich and seductive, so velvety and smooth that it surprises the palate. Its classic aroma is semi-sweet and caramel-like with a delicate chocolaty aftertaste and spicy overtones.</p>
+                        <p>Rich and seductive, so velvety and smooth that it surprises the palate. Classic aroma and a delicate chocolaty aftertaste and spicy overtones.</p>
                         <ul class="list-inline">
                             <li class="list-inline-item inline-stars d-none d-sm-block">
                                 <p class="coffee-rating">Acidity</p>
